--- a/client.html
+++ b/client.html
@@ -3,16 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="./style.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Text Completions</h1>
-    <form id="completion-form">
-        <label for="prompt">Prompt:</label>
-        <input type="text" id="prompt" name="prompt" required>
-        <button id="generate" type="button" onclick="startStreaming()">Generate Completion</button>
-    </form>
+    <div id="wrapper">
+        <form id="completion-form">
+            <div>
+                <label for="max-tokens">Max Tokens:</label>
+                <input type="number" id="max-tokens" name="max tokens" value="64" min="1" max="2048" required>
+            </div>
+            <div>
+                <label for="temperature">Temperature:</label>
+                <input type="number" id="temperature" name="temperature" value="0.9" min="0" max="1" step="0.01" required>
+            </div>
+            <div>
+                <label for="model">Model:</label>
+                <select id="model" name="model" required>
+                    <option value="gpt-3.5-turbo">gpt-3.5-turbo</option>
+                    <option value="text-davinci-003" selected>text-davinci-003</option>
+                </select>
+            </div>
+            <div>
+                <label for="request-type">Request type:</label>
+                <select id="request-type" required>
+                    <option value="chat">chat</option>
+                    <option value="completions" selected>completions</option>
+                    <option value="embeddings">embeddings</option>
+                </select>
+            </div>
+            <div>
+                <label for="stream">Stream</label>
+                <input type="checkbox" id="stream" name="stream" checked>
+            </div>
+            <div>
+                <label for="prompt">Prompt:</label>
+                <textarea id="prompt" spellcheck="false" name="prompt" required></textarea>
+            </div>
+            <button id="generate" type="button">Run</button>
+        </form>
+        <div id="result"></div>
+    </div>
 
-    <div id="result"></div>
+
 
     <script src="script.js"></script>
 </body>
